--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Unit 4 Game</title>
-    <script rel="stylesheet" src="assets/css/reset.css"></script>
-    <script rel="stylesheet" src="assets/css/style.css"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <title>Unit 4 Game</title>
+    
+  
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/style.css"></link>
+  
  
  
 </head>
@@ -19,14 +18,16 @@
   <div class="jumbotron">
     <h1>Crystal Guess Game</h1> 
     <p> Use the crystals below to add numbers that match</p> 
-    <div id="randomNumber"><div>
+    <div id="random-Number"><div>
   </div>
 
-  <div class="well ">med Well</div>
-  <img src="cinqueterre.jpg" class="img-thumbnail" alt="Cinque Terre">
-  <img src="cinqueterre.jpg" class="img-thumbnail" alt="Cinque Terre">
-  <img src="cinqueterre.jpg" class="img-thumbnail" alt="Cinque Terre">
+  <div class="well ">
+  <img src="assets/images/clear.jpg" class="img-thumbnail" alt="clear">
+  <img src="assets/images/diamond.jpg" class="img-thumbnail" alt="diamond">
+  <img src="assets/images/purple.jpg" class="img-thumbnail" alt="purple">
+  <img src="assets/images/star.jpg" class="img-thumbnail" alt="star">
   </div>
+   </div>
     
  <script
   src="https://code.jquery.com/jquery-migrate-3.1.0.min.js"
