added random numbers to crystals

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
   
 
   <div class="container jumbotron text-center " style="background-color:goldenrod; color:blue" >
-    <button Id="btn1" class="btn img-thumbnail" value="" alt="clear"></button>
-    <button Id="btn2" class="btn img-thumbnail" value="" alt="clear"></button>
-    <button Id="btn3" class="btn img-thumbnail" value="" alt="clear"></button>
-    <button Id="btn4" class="btn img-thumbnail" value="" alt="clear"></button>
+    <button id="btn1" class="btn img-thumbnail"  alt="clear"></button>
+    <button id="btn2" class="btn img-thumbnail"  alt="clear"></button>
+    <button id="btn3" class="btn img-thumbnail"  alt="clear"></button>
+    <button id="btn4" class="btn img-thumbnail"  alt="clear"></button>
   </div>
   <div class="container">
       <div class="row">
