--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Unit 4 Game</title>
+    <title>Crystal Collector Game</title>
     <!--added stylesheets-->
     <link rel="stylesheet" href="assets/css/reset.css"></link>
-   <link href="https://fonts.googleapis.com/css?family=Marck+Script|Staatliches&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=B612+Mono|Marck+Script|ZCOOL+XiaoWei|Staatliches&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Marck+Script|Staatliches&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=B612+Mono|Marck+Script|ZCOOL+XiaoWei|Staatliches&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rock+Salt&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> 
@@ -18,48 +19,48 @@
 </head>
 
 <body>
- 
+
     <div class="jumbotron">
       <h1 class="text-center">Crystal Collector Game</h1> 
       <p class="text-center"> Each crystal below is assigned a value.  Use them to add numbers that equal the Target Number.  Go over and you lose!</p> 
-    <div class="container">
-      <div class="row text-center">
-        <div class=" col-6" >
-          <h3>Your Wins</h3>
-          <div class="num wins"  id="your-Wins">
+    
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-12">
+            <h3>Score</h3>
+            <div class="num score" id="user-Total"></div>
           </div>
         </div>
-        <div  class="col-6" >
-          <h3>Your Losses</h3>
-          <div class="num losses" id="your-Losses">
+        <div class="row text-center">
+          <div class="col-12">
+            <div class="container">
+              <div class="row text-center">
+                <div class=" col-6" >
+                  <h3>Your Wins</h3>
+                  <div class="num wins"  id="your-Wins">
+                  </div>
+                </div>
+                <div class="col-6" >
+                  <h3>Your Losses</h3>
+                  <div class="num losses" id="your-Losses">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <h3>Target Number</h3>
+            <div class="num target" id="crystal-Value">
+            </div>
           </div>
         </div>
-    </div>
-
-    <div class="row text-center">
-      <div class="col-3">
-        <h3>Target Number</h3>
-        <div class="num target" id="crystal-Value">
-        </div>
-      </div>
-      <div class="col-3">
-        <h3>Score</h3>
-        <div class="num score" id="user-Total"></div>
       </div>
     </div>
-  </div>
 
-
-  <div  class="container text-center">
+  <div class="container text-center">
     <button id="btn1" class="btn img-thumbnail"  alt="clear"></button>
     <button id="btn2" class="btn img-thumbnail"  alt="clear"></button>
     <button id="btn3" class="btn img-thumbnail"  alt="clear"></button>
     <button id="btn4" class="btn img-thumbnail"  alt="clear"></button>
   </div>
-  
 
-</div>
-    
- 
 </body>
 </html>
