--- a/index.html
+++ b/index.html
@@ -62,5 +62,9 @@
     <button id="btn4" class="btn img-thumbnail"  alt="clear"></button>
   </div>
 
+
+  <div class="footer text-center "> Crystal Collector, by LaMana Donadelle</div>
+
+
 </body>
 </html>
